objects/Competitor_Capture_Team__c.object
<CustomObject>
    <description>R4 Competitor Capture Team</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Competitors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompetitorOwnerName__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CompetitorOwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <inlineHelpText>List up to 3 main competitors for this particular project and for the scope you intend to offer.</inlineHelpText>
        <label>Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Competitor</label>
    <nameField>
        <displayFormat>CTCN - {0000}</displayFormat>
        <label>Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Competitor_No_Bulk_Accounts</fullName>
        <active>true</active>
        <description>Account cannot be a Bulk Account.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.Validation_Override__c.Exclude__c), 
    CONTAINS(LOWER(Account__r.Name), &apos;bulk business&apos;)    
)</errorConditionFormula>
        <errorMessage>Account cannot be a Bulk Account.</errorMessage>
    </validationRules>
</CustomObject>